<package format="2">
    <name>rviz_continuous_point_cloud</name>
    <version>0.1.0</version>
    <description>
        Default PointCloud2 Display optimized for high frequency message input (required for continuous clustering).
    </description>
    <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>
    <license>TODO</license>

    <author>Andreas Reich</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rviz</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>vis_point_cloud_transformers</exec_depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
