<package format="2">
    <name>rviz_continuous_point_cloud</name>
    <version>0.1.0</version>
    <description>
        Default PointCloud2 Display optimized for high frequency message input (required for continuous clustering).
    </description>
    <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>
    <author email="andreas.reich@unibw.de">Andreas Reich</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rviz</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>rviz_colorize_point_cloud_by_label</exec_depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
